3단계 - 로또(2등), 2단계 - 로또(자동) 피드백 반영 (#3895)
* docs(lotto): add 로또 보너스 번호를 저장한다
add 로또2등
add 로또2등 -> 로또3등
add 로또3등 -> 로또4등
add 로또4등 -> 로또5등

feat(lotto): add BonusCreator, LottoBonusCreator

feat(lotto): add Ranking FIFTH,
modify FOURTH, THIRD, SECOND

test(lotto): add LottoTest 로또를_저장한다->로또번호목록과_보너스번호를_저장한다 method
modify 로또4등->로또5등 method
modify 로또3등->로또4등 method
modify 로또2등->로또3등 method
modify 로또2등 method
modify 로또1등 method

* refactor(lotto2nd): add Ranking isMatchedBonusNumber field
modfiy static result method

refactor(lotto2nd): remove Lotto bonusNumber field
remove bonumNumber static of method

test(lotto2nd): modify LottoTest(of 메서드와 관련된 모든 테스트) methods

refactor(lotto2nd): add Result bonusNumber field

test(lotto2nd): modify ResultTest 수익률을_출력한다, 구매한_로또번호_6자리_목록의_등수들을_리턴한다 method

refactor(lotto2nd): remove Buyer parameter bonusCreator static of method

test(lotto2nd): modify Buyer 구매자의_로또목록을_출력한다(of 메서드와 관련된 모든 테스트) method

* refactor(lotto2nd): add Winning winningLotto, bonusNumber method

test(lotto2nd): modify WinningTest 생성, 당첨번호목록_보너스번호_중복 method

refactor(lotto2nd): add Lotto compare method parameter

test(lotto2nd): modify LottoTest compare 관련 테스트

refactor(lotto2nd): modify Result winningLotto, bonusNumber -> winning field 통합

test(lotto2nd): modify ResultTest winningLotto, bonusNumber -> winning field 통합 관련 테스트

* refactor(lotto): modify Result rankingConut parameter variable name(fourth -> ranking)

refactor(lotto): modify Result statistics 파라미터로 함수호출이 중첩되는 로직 변수로 추출

test(lotto): modify LottoTest 로또_등수_없음 test case 추가(1개, 2개 맞출시에도 등수없음 판정)

* fix(lotto2nd): modify Ranking result method(1,3,4,5 등 보너스를 맞췄을때 필터통과 -> NONE return 오류 수정)

test(lotto2nd): modify LottoTest 로또_등수_없음,로또5등,로또4등,로또3등,로또2등,로또1등 test fixture 추가

* refactor(lotto): modify of static method -> constructor

* refactor(lotto): remove Lotto numbers
refactor(lotto): add Lotto contains